--- a/end/public/index.html
+++ b/end/public/index.html
@@ -37,7 +37,66 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"
         integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@aspnet/signalr@1.1.0/dist/browser/signalr.js"></script>
-    <script src="index.html.js" type="text/javascript"></script>
+    <script >
+        const apiBaseUrl = window.location.origin;
+const REMOTE_BASE_URL = '<FUNCTION_APP_ENDPOINT>';
+
+const getAPIBaseUrl = () => {
+    const isLocal = /localhost/.test(window.location.href);
+    console.log(`isLocal = ${isLocal}`);
+    const baseUrl = isLocal ? window.location.origin : REMOTE_BASE_URL;
+    console.log(`baseUrl = ${baseUrl}`);
+    return baseUrl;
+}
+
+const app = new Vue({
+    el: '#app',
+    data() {
+        return {
+            stocks: []
+        }
+    },
+    methods: {
+        async getStocks() {
+            try {
+                const apiUrl = `${getAPIBaseUrl()}/api/getStocks`;
+                const response = await axios.get(apiUrl);
+                app.stocks = response.data;
+                console.log('Stocks', JSON.stringify(response.data));
+            } catch (ex) {
+                console.error(ex);
+            }
+        }
+    },
+    created() {
+        this.getStocks();
+    }
+});
+
+const connect = () => {
+    const connection = new signalR.HubConnectionBuilder()
+                            .withUrl(`${getAPIBaseUrl()}/api`)
+                            .build();
+
+    connection.onclose(()  => {
+        console.log('SignalR connection disconnected');
+        setTimeout(() => connect(), 2000);
+    });
+
+    connection.on('updated', updatedStock => {
+        
+        const index = app.stocks.findIndex(s => s.id === updatedStock.id);
+        console.log(`${updatedStock.symbol} ${app.stocks[index].price} => ${updatedStock.price}`);
+        app.stocks.splice(index, 1, updatedStock);
+    });
+
+    connection.start().then(() => {
+        console.log("SignalR connection established");
+    });
+};
+
+connect();
+    </script>
 </body>
 
 </html>
