--- a/client-start/index.html
+++ b/client-start/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css" integrity="sha256-8B1OaG0zT7uYA572S2xOxWACq9NXYPQ+U5kHPV1bJN4=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.html.css">
+    <link rel="stylesheet" href="style.css">
     <title>Stocks | Enable automatic updates in a web application using Azure Functions and SignalR</title>
 </head>
 <body>
@@ -27,21 +27,6 @@
     <!-- END  -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js" integrity="sha256-chlNFSVx3TdcQ2Xlw7SvnbLAavAQLO0Y/LBiWX04viY=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
-    <script>
-    window.myData = null;
-    fetch('/config.json')
-    .then(response => response.json())
-    .then(config => {
-        // Use the data
-        backendUrl = config.BASE_SERVERLESS_URL;
-        console.log(`backendUrl:${backendUrl}`);
-
-        window.backendUrl = backendUrl;
-        console.log(`window.backendUrl:${window.backendUrl}`);
-    })
-    .catch(error => console.error('Error:', error));
-    </script>
-    <script src="index.html.js" type="text/javascript"></script>
+    <script src="bundle.js" type="text/javascript"></script>
 </body>
 </html>
