--- a/client-end/index.html
+++ b/client-end/index.html
@@ -9,7 +9,7 @@
         integrity="sha256-8B1OaG0zT7uYA572S2xOxWACq9NXYPQ+U5kHPV1bJN4=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Stocks | Enable automatic updates in a web application using Azure Functions and SignalR</title>
+    <title>Stock Notifications | Enable automatic updates in a web application using Azure Functions and SignalR</title>
 </head>
 
 <body>
